don't include linux unwind support.  we don't do this on 32 bit ppc, we don't have the symbols to support it, and it breaks c++ linking. from dennis.c.ferguson@gmail.com in PR#43041.